force-app/main/default/objects/Group_Answer__c/Group_Answer__c.object-meta.xml
<CustomObject>
    <description>Объект GroupAnswer нужен для группировки и “объединения” Answer определенного пользователя на определенный Survey.Так же он содержит имя Survey, ответы на который он группирует.</description>
    <label>Group Answer</label>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Group Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>