force-app/main/default/objects/Group_Answer__c/fields/IsLinked__c.field-meta.xml
<CustomField>
    <fullName>IsLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Указывает нужно ли привязывать ответ на опрос к Contact/Case/Lead.</description>
    <label>IsLinked</label>
    <type>Checkbox</type>
</CustomField>