force-app/main/default/objects/Group_Answer__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Привязка к Related Object для привязки к Contact/Case/Lead, если чекбокс = true</description>
    <label>Related To</label>
    <referenceTo>Related_Object__c</referenceTo>
    <relationshipLabel>Group Answers</relationshipLabel>
    <relationshipName>Group_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>