force-app/main/default/objects/Group_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsLinked__c</columns>
    <columns>Related_To__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>